# capwap-discovery-fuzzer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  discovery_messages.json  justfile  pyproject.toml  run_fuzzing.sh  run_fuzzing_broadcast.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md  重庆大学普通本科毕业论文（设计）附件（任务书、开题报告、译文）模板202310.doc  针对CAPWAP协议的安全分析工具设计与实现-任务书.docx  针对CAPWAP协议的安全分析工具设计与实现-开题报告.docx
docs/校外毕设申请表/: tmp.doc  ~$1：重庆大学本科生校外毕业论文（设计）申请表.doc  ~WRL0001.tmp  附件1：重庆大学本科生校外毕业论文（设计）申请表.doc  附件2：重庆大学聘请本科生毕业论文（设计）校外指导教师登记表.doc
pcaps/: sample_discovery_request.pcap
src/capwap_discovery_fuzzer/: Payload.py  __init__.py  capwap_discovery_fuzzer.py  cli.py  errors.py  payload_creater.py  payload_fuzzer.py  request_creater.py  response_parser.py  utils.py
tests/: __init__.py  test_capwap_discovery_fuzzer.py
