[project]
name = "capwap-discovery-fuzzer"
version = "0.1.0"
description = "Academic CAPWAP Discovery Request/Response fuzzing tool"
readme = "README.md"
authors = [
  {name = "Xuanming Ge", email = "13700900232@163.com"}
]
maintainers = [
  {name = "Xuanming Ge", email = "13700900232@163.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "scapy"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/sckrt/capwap_discovery_fuzzer/issues"
changelog = "https://github.com/sckrt/capwap_discovery_fuzzer/blob/master/changelog.md"
homepage = "https://github.com/sckrt/capwap_discovery_fuzzer"

[project.scripts]
capwap_discovery_fuzzer = "capwap_discovery_fuzzer.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
